# MultiPilot

./: .gitignore  CLAUDE.md  LICENSE  MULTIPILOT-SPECIFICATION.md  README.md  index.html  package-lock.json  package.json  start.ps1  start.sh  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: ACP_PROTOCOL.md  API.md  FEATURES.md  TROUBLESHOOTING.md
sidecar/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
sidecar/acp-sdk/: README.md  package.json
sidecar/acp-sdk/src/: index.ts
sidecar/scripts/: acp-runner.ts  build-binary.js
sidecar/src/: FileManager.ts  GitManager.ts  index.ts  types.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md
src-tauri/src/: acp_runner.rs  agent.rs  commands.rs  discovery.rs  main.rs  types.rs
src/components/ACP/: DiffViewer.tsx  MessageRenderer.tsx  PlanViewer.tsx  TerminalViewer.tsx  ToolCallCard.tsx
src/components/AgentGrid/: AgentCard.tsx  AgentGrid.tsx
src/components/ApprovalQueue/: ApprovalCard.tsx  ApprovalQueue.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/Dashboard/: GlobalDashboard.tsx
src/hooks/: useACP.ts  useKeyboardShortcuts.ts
src/lib/: ipc.ts  logger.ts  streamJsonParser.ts  themes.ts  types.ts  utils.ts
src/mocks/: tauri.ts
src/stores/: activityStore.ts  agentStore.ts  approvalStore.ts  commandStore.ts  fileStore.ts  gitStore.ts  logStore.ts  notificationStore.ts  profileStore.ts  projectStore.ts  taskStore.ts
src/styles/: globals.css
src/test/: setup.ts
(+34 files in other folders)
